--- a/front/package.json
+++ b/front/package.json
@@ -8,10 +8,14 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint --ext .jsx,.js,.tsx,.ts src/",
-    "fmt": "prettier --write src/**/*"
+    "fmt": "prettier --write src/**/*",
+    "graphql-codegen": "graphql-codegen --config codegen.yml"
   },
   "license": "MIT",
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.5.1",
+    "@graphql-codegen/typescript-operations": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "5.28.0",
     "@typescript-eslint/parser": "5.28.0",
     "autoprefixer": "10.4.7",
@@ -28,8 +32,10 @@
     "vite-tsconfig-paths": "3.5.0"
   },
   "dependencies": {
+    "@solid-primitives/graphql": "^1.1.1",
     "daisyui": "2.15.3",
     "dayjs": "1.11.3",
+    "graphql": "^16.5.0",
     "solid-app-router": "0.3.3",
     "solid-js": "1.4.4"
   }
