feat: add db container

--- a/back/Makefile
+++ b/back/Makefile
@@ -3,3 +3,10 @@ serve:
 
 graphql-codegen:
 	go run github.com/99designs/gqlgen generate
+
+start-containers:
+	docker compose down --volumes --remove-orphans
+	docker compose up -d --build
+
+down-containers:
+	docker compose down --volumes --remove-orphans
